--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -183,6 +183,7 @@
 	"mmorpg.item_tips.durability": "Durability: ",
 	"mmorpg.item_tips.empty_socket": "[Socket]",
 	"mmorpg.item_tips.enchanted": "Enchanted(%1$s/10): ",
+	"mmorpg.item_tips.enchantment_gear_level_range": "Gear level range: %1$s - %2$s",
 	"mmorpg.item_tips.enchantment_level": "Applied Gear Level: %1$s - %2$s",
 	"mmorpg.item_tips.exp": "Bonus Exp: %1$s%%",
 	"mmorpg.item_tips.gear_soul_use_tip": "[Drag onto gear to use]",
@@ -214,6 +215,7 @@
 	"mmorpg.item_tips.soul_cleaner_usage_and_warning": "Click on items to remove their soul.\nThe item remains but the stats will be deleted.",
 	"mmorpg.item_tips.soul_extractor_tip": "Click on items to extract their soul.\nWorks only on that rarity.\nDeletes the Item in the process.",
 	"mmorpg.item_tips.soul_generate_gear_level_range": "Generated Gear Level: %1$s - %2$s",
+	"mmorpg.item_tips.soul_locked_to_type": "Locked Armor type: %1$s",
 	"mmorpg.item_tips.soul_modifier_tip": "Soul modifier can be applied to gear soul, which then generate \nonly the corresponding gear type when use.",
 	"mmorpg.item_tips.soul_modifier_use_tip": "[Drag onto gear soul to use]",
 	"mmorpg.item_tips.soul_stone_tip": "Right click to produce a common gear soul.",
@@ -630,34 +632,50 @@
 
 	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
@@ -1818,6 +1836,45 @@
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
+	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
+	"mmorpg.gear_type.plate_pants": "Plate Pants",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Tower Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.tome": "Tome",
+	"mmorpg.gear_type.totem": "Totem",
+	"mmorpg.gearslot.boots": "Boots",
+	"mmorpg.gearslot.bow": "Bow",
+	"mmorpg.gearslot.chest": "Chest",
+	"mmorpg.gearslot.crossbow": "Crossbow",
+	"mmorpg.gearslot.helmet": "Helmet",
+	"mmorpg.gearslot.necklace": "Necklace",
+	"mmorpg.gearslot.pants": "Pants",
+	"mmorpg.gearslot.ring": "Ring",
+	"mmorpg.gearslot.shield": "Shield",
+	"mmorpg.gearslot.staff": "Staff",
+	"mmorpg.gearslot.sword": "Sword",
+	"mmorpg.gearslot.tome": "Tome",
+	"mmorpg.gearslot.totem": "Totem",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
@@ -1870,7 +1927,7 @@
 	"mmorpg.chat.already_casting": "Already Casting a Spell",
 	"mmorpg.chat.already_max_links": "Item already has maximum possible links.",
 	"mmorpg.chat.already_max_sockets": "Item already has maximum possible sockets.",
-	"mmorpg.chat.alt_to_show_other_spell": "[Alt] to show the other Spell",
+	"mmorpg.chat.alt_to_show_other_spell": "Press [Alt] to show the other Spell",
 	"mmorpg.chat.any_item": "Any weapon can use.",
 	"mmorpg.chat.awarded_talents": "You have been rewarded %1$s Talent Points.",
 	"mmorpg.chat.be_unique": "The item must be of unique rarity.",
@@ -1892,6 +1949,7 @@
 	"mmorpg.chat.death_exp_loss_msg": "As a result of dying, you have lost %1$s Exp and received %2$s Exp debt.",
 	"mmorpg.chat.destroys_output": "When Placed in a Profession Station with other inputs/materials, it will make all recipes produced give 3X the EXP but it will destroy the output.",
 	"mmorpg.chat.dev_tools_enabled_contact_the_author": "Devs tools enabled, if you see this please contact the author of Mine and Slash [robertx22], he forgot to disable them!",
+	"mmorpg.chat.empty_map_forced_tp": "The Map you're currently inside was deleted. This can happen if you entered another player's map and they started a new one.",
 	"mmorpg.chat.enchant_upgrade_rarity": "Enchants must be applied consecutively. A common enchant has to come before an uncommon enchant may be applied.",
 	"mmorpg.chat.enemy_too_close": "Can't do that. There are enemies nearby.",
 	"mmorpg.chat.failed_to_award_talents": "Failed to give more talent points, you have reached the cap. The maximum allowed bonus talent points is controlled by the config file.",
@@ -2535,6 +2593,9 @@
 	"mmorpg.word.exp": "Exp",
 	"mmorpg.word.game_changer": "Game Changer Talent",
 	"mmorpg.word.gear": "Gear",
+	"mmorpg.word.gear_locked_type_cloth": "Cloth",
+	"mmorpg.word.gear_locked_type_leather": "Leather",
+	"mmorpg.word.gear_locked_type_plate": "Plate",
 	"mmorpg.word.gears": "Gears",
 	"mmorpg.word.gem": "Gem",
 	"mmorpg.word.greater": "Greater",
