make team command information translatable, also add some condition check and QoL feature

--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -1992,12 +1992,15 @@
 	"mmorpg.chat.not_in_this_dimension": "You can't cast this spell in this dimension.",
 	"mmorpg.chat.not_jewel": "This is not a jewel item.",
 	"mmorpg.chat.not_map": "This is not a map item.",
+	"mmorpg.chat.not_meet_map_req": "%1$s: %2$s/%3$s",
+	"mmorpg.chat.not_meet_map_req_first_line": "You haven't met the map requirement: ",
 	"mmorpg.chat.not_mns_weapon": "You need a Mine and Slash Weapon (Imbued with Stats) to Cast spells.",
 	"mmorpg.chat.not_owner": "You are not the owner of this Station. Stations can NOT be shared, you have to craft your own.",
 	"mmorpg.chat.not_skillgem": "This is not a skill gem.",
 	"mmorpg.chat.not_tool": "This is not a tool item, or the tool has no stats yet.",
 	"mmorpg.chat.only_one_of_type": "Can only have one Perk of this type:",
 	"mmorpg.chat.open_loot_chest": "Right-click to open Loot Chest!",
+	"mmorpg.chat.player_touched_altar_again": "You've used this altar before",
 	"mmorpg.chat.prof_mat_dropguide": "Mine and Slash Profession Material",
 	"mmorpg.chat.prof_mat_dropguide_common": "Common Drop",
 	"mmorpg.chat.prof_mat_dropguide_rare": "Rare Drop",
@@ -2752,6 +2755,37 @@
 	"mmorpg.loot_modifier.player_loot_quantity": "Player Loot Quantity",
 
 "_comment": " [CATEGORY]: LOOTMODIFIER - NAMES",
+
+
+"_comment": " [CATEGORY]: COMMAND - NAMES",
+
+	"mmorpg.command.auto_pve_teammate": " (Auto PVE)",
+	"mmorpg.command.been_invited": "%1$s has invited you to a team.",
+	"mmorpg.command.been_kicked": "You have been kicked from your team.",
+	"mmorpg.command.cant_invite_yourself": "you can't invite yourself!",
+	"mmorpg.command.cant_make_leader": "You are already the team leader.",
+	"mmorpg.command.click_to_create": "You can click here to create a team!",
+	"mmorpg.command.click_to_join": "You can also click here to join!",
+	"mmorpg.command.click_to_leave_and_create": "Click Here to leave and create a new team.",
+	"mmorpg.command.create_when_in_a_team": "You are already in a team, do you still want to create a new team? ",
+	"mmorpg.command.invite_info": "You have invited %1$s to join your team.",
+	"mmorpg.command.join_team": "You have joined %1$s's team.",
+	"mmorpg.command.join_tip": "Do /mine_and_slash teams join %1$s to accept",
+	"mmorpg.command.kick_info": "You have kicked %1$s from your team.",
+	"mmorpg.command.leave_team": "You have leaved the team.",
+	"mmorpg.command.not_in_a_team_currently": "Player isn't in a team",
+	"mmorpg.command.not_in_same_team_due_to_distance": " (Too Far)",
+	"mmorpg.command.not_in_team": "You are not in a team.",
+	"mmorpg.command.not_invited": "You aren't invited to their team",
+	"mmorpg.command.player_not_in_team": "They aren't on your team",
+	"mmorpg.command.somebody_joined_your_team": "%1$s has joined your team!",
+	"mmorpg.command.team_created": "Team Created, you can now invite other players.",
+	"mmorpg.command.team_member": "Team members: ",
+	"mmorpg.command.transfer_leadership": "%1$s is now a team leader.",
+	"mmorpg.command.you_are_leader": "You have been made a team leader.",
+	"mmorpg.command.you_are_not_leader": "you aren't the leader.",
+
+"_comment": " [CATEGORY]: COMMAND - NAMES",
 
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - DESCRIPTIONS",
