remove redundant space

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -172,41 +172,41 @@
 	"mmorpg.grouped_stat_section.elemental_resists": "元素抗性",
 	"mmorpg.grouped_stat_section.other": "其他属性",
 	"mmorpg.grouped_stat_section.regen": "恢复属性",
-	"mmorpg.item_tips.affix_stats": "词缀属性： ",
+	"mmorpg.item_tips.affix_stats": "词缀属性：",
 	"mmorpg.item_tips.alt_tip": "[Alt]：描述",
-	"mmorpg.item_tips.aura_reservation": "光环容量： ",
-	"mmorpg.item_tips.buff_tip": "增益效果属性： ",
+	"mmorpg.item_tips.aura_reservation": "光环容量：",
+	"mmorpg.item_tips.buff_tip": "增益效果属性：",
 	"mmorpg.item_tips.check_gear_stats_in_soul": "这一灵魂携带有装备属性，按住Shift可查看属性详情。",
 	"mmorpg.item_tips.chest_contains": "包含：%1$s",
 	"mmorpg.item_tips.cor_stats": "腐化属性 ",
 	"mmorpg.item_tips.ctrl_tip": "[Ctrl]：隐藏",
-	"mmorpg.item_tips.durability": "耐久度： ",
+	"mmorpg.item_tips.durability": "耐久度：",
 	"mmorpg.item_tips.empty_socket": "[空槽位]",
-	"mmorpg.item_tips.enchanted": "附魔属性（%1$s/10）： ",
+	"mmorpg.item_tips.enchanted": "附魔属性（%1$s/10）：",
 	"mmorpg.item_tips.enchantment_gear_level_range": "适用装备等级：%1$s - %2$s",
 	"mmorpg.item_tips.exp": "经验增益：%1$s%%",
 	"mmorpg.item_tips.gear_soul_use_tip": "[拖拽到装备上使用]",
 	"mmorpg.item_tips.gem_open_gui_tip": "右击打开GUI",
 	"mmorpg.item_tips.item_tier_tip": "物品等阶：%1$s",
 	"mmorpg.item_tips.item_type": "物品种类：%1$s",
-	"mmorpg.item_tips.jewel_stats": "珠宝属性： ",
+	"mmorpg.item_tips.jewel_stats": "珠宝属性：",
 	"mmorpg.item_tips.level_req": "等级最低：%1$s",
 	"mmorpg.item_tips.level_tip": "等级 %1$s",
 	"mmorpg.item_tips.loot": "掉落物增益：%1$s%%",
-	"mmorpg.item_tips.map_league_spawn": "将会生成： ",
+	"mmorpg.item_tips.map_league_spawn": "将会生成：",
 	"mmorpg.item_tips.map_tier_tip": "地图等阶描述了该地图的整体难度以及战利品质量",
 	"mmorpg.item_tips.need_key": "需要%1$s ",
 	"mmorpg.item_tips.outcome_tip": "%1$s，几率：%2$s",
 	"mmorpg.item_tips.outcome_tip.locale_context_for_translator": "for currency tooltips",
 	"mmorpg.item_tips.potential": "潜能：%1$s%%",
-	"mmorpg.item_tips.prefix_stats": "前缀属性： ",
+	"mmorpg.item_tips.prefix_stats": "前缀属性：",
 	"mmorpg.item_tips.prof_tool_exp_tip": "经验：%1$s/%2$s",
 	"mmorpg.item_tips.prof_tool_level_cap": "[受限于等级 %1$s]",
-	"mmorpg.item_tips.prof_tool_stats_tip": "用具属性： ",
+	"mmorpg.item_tips.prof_tool_stats_tip": "用具属性：",
 	"mmorpg.item_tips.quality": "质量：%1$s%%",
 	"mmorpg.item_tips.rarity_line": "%1$s物品",
-	"mmorpg.item_tips.rarity_tip": "稀有度： ",
-	"mmorpg.item_tips.remaining_aura_capacity": "剩余光环容量： ",
+	"mmorpg.item_tips.rarity_tip": "稀有度：",
+	"mmorpg.item_tips.remaining_aura_capacity": "剩余光环容量：",
 	"mmorpg.item_tips.restores": "恢复量：%1$s",
 	"mmorpg.item_tips.rune_item_usage": "右击可镶入带空槽位的装备中。\n若装备上已有类型一样的符文，则会重置该符文的属性。\n你可以在百科页面中找到所有类型的符文之语。\n右击使用可查看该符文参与合成的符文之语。",
 	"mmorpg.item_tips.shift_tip": "[Shift]：详细",
@@ -219,11 +219,11 @@
 	"mmorpg.item_tips.soul_modifier_use_tip": "[拖拽到装备灵魂上使用]",
 	"mmorpg.item_tips.soul_stone_tip": "使用后，产出一个普通装备灵魂",
 	"mmorpg.item_tips.soul_tier_tip": "灵魂等阶决定了生成装备的等级区间",
-	"mmorpg.item_tips.stat_req": "%1$s最低要求： ",
+	"mmorpg.item_tips.stat_req": "%1$s最低要求：",
 	"mmorpg.item_tips.stone_repaire_durability": "修理%1$s点耐久度。",
-	"mmorpg.item_tips.suffix_stats": "后缀属性： ",
+	"mmorpg.item_tips.suffix_stats": "后缀属性：",
 	"mmorpg.item_tips.support_gem_cost": "施法资源消耗增长：%1$s%%",
-	"mmorpg.item_tips.support_gem_only_one": "只允许有一个： ",
+	"mmorpg.item_tips.support_gem_only_one": "只允许有一个：",
 	"mmorpg.item_tips.tier_influence": "怪物等阶增幅",
 	"mmorpg.item_tips.tier_tip": "等阶 %1$s",
 	"mmorpg.item_tips.tp_back_item": "使用后，即可从地图中返回。\n会直接退出地图维度。",
@@ -231,7 +231,7 @@
 	"mmorpg.item_tips.uber_boss_map_tip": "右击生成一张地图 \n准备来一场 Boss 战吧！",
 	"mmorpg.item_tips.unbreakable": "无法破坏",
 	"mmorpg.item_tips.unique_jewel_use": "右击生成",
-	"mmorpg.item_tips.unique_stats": "独特属性： ",
+	"mmorpg.item_tips.unique_stats": "独特属性：",
 	"mmorpg.mob_affix.chaos_mob_affix": "毒素的",
 	"mmorpg.mob_affix.fire_lord": "火焰领主的",
 	"mmorpg.mob_affix.fire_mob_affix": "火烈的",
@@ -522,7 +522,7 @@
 
 
 	"mmorpg.gui.available_support_slots": "辅助宝石槽位可用：%1$s/5",
-	"mmorpg.gui.comma_separator": "， ",
+	"mmorpg.gui.comma_separator": "，",
 	"mmorpg.gui.current_favor": "当前：%1$s",
 	"mmorpg.gui.exp_gain_percent": "+%1$s %2$s经验（%3$s%%）",
 	"mmorpg.gui.favor_in_gui": " 恩宠值",
@@ -530,23 +530,23 @@
 	"mmorpg.gui.favor_per_death": "\u00A7c死亡会损失%1$s点",
 	"mmorpg.gui.favor_regen_per_hour": "\u00A7d每小时恢复%1$s\u00A7d点",
 	"mmorpg.gui.loot_exp_multiplier": "战利品/经验增幅：%1$sx",
-	"mmorpg.gui.mainhub_level": "等级： ",
-	"mmorpg.gui.passive_points": "被动点数： ",
+	"mmorpg.gui.mainhub_level": "等级：",
+	"mmorpg.gui.passive_points": "被动点数：",
 	"mmorpg.gui.prof_level_and_exp": "等级：%1$s 经验：%2$s/%3$s",
 	"mmorpg.gui.prof_name": "%1$s：%2$s",
-	"mmorpg.gui.rested_combat_exp": "战斗经验积攒： ",
-	"mmorpg.gui.rested_prof_exp": "副职业经验积攒： ",
+	"mmorpg.gui.rested_combat_exp": "战斗经验积攒：",
+	"mmorpg.gui.rested_prof_exp": "副职业经验积攒：",
 	"mmorpg.gui.salvage_tip_off": "自动回收%1$s%2$s：关闭",
 	"mmorpg.gui.salvage_tip_on": "自动回收%1$s%2$s：开启",
 	"mmorpg.gui.spell_damage_proportion": "（%1$s%%的%2$s\u00A77）",
-	"mmorpg.gui.spell_points": "法术点数： ",
-	"mmorpg.gui.stat_total": "总属性： ",
-	"mmorpg.gui.stats_influence": "每点增加： ",
-	"mmorpg.gui.stats_points": "点数： ",
+	"mmorpg.gui.spell_points": "法术点数：",
+	"mmorpg.gui.stat_total": "总属性：",
+	"mmorpg.gui.stats_influence": "每点增加：",
+	"mmorpg.gui.stats_points": "点数：",
 	"mmorpg.gui.status_bar_huger": "饥：%1$s 饱：%2$s",
 	"mmorpg.gui.status_bar_level": "等级 %1$s %2$s%%",
-	"mmorpg.gui.talent_points": "点数： ",
-	"mmorpg.gui.talent_reset_points": "重置点数： ",
+	"mmorpg.gui.talent_points": "点数：",
+	"mmorpg.gui.talent_reset_points": "重置点数：",
 
 
 
@@ -1940,7 +1940,7 @@
 	"mmorpg.chat.cant_rune_this_unique": "无法在独特装备上镶入符文",
 	"mmorpg.chat.cant_same_buff": "你已经有了该种类的增益效果",
 	"mmorpg.chat.cant_use_multiple_same_supports": "该种辅助宝石无法使用多个。",
-	"mmorpg.chat.cast_failed": "[施法失败]： ",
+	"mmorpg.chat.cast_failed": "[施法失败]：",
 	"mmorpg.chat.caught_something": "你发现了某物！",
 	"mmorpg.chat.character_load_info": "点击此处加载你的角色\n\n以下信息将会被保存在角色内：\n- 你的等级与经验\n- 你的法术、属性、天赋以及技能快捷栏\n\n你的装备、宝石以及珠宝等信息则不会保存入内。\n\n每名角色的的初始等级均为 1 级。",
 	"mmorpg.chat.command_block_unavaliable": "命令方块已禁用，因而你无法进入挖矿与砍杀的地牢之中。",
@@ -1989,7 +1989,7 @@
 	"mmorpg.chat.not_jewel": "此物不是珠宝",
 	"mmorpg.chat.not_map": "此物不是地图",
 	"mmorpg.chat.not_meet_map_req": "%1$s：%2$s/%3$s",
-	"mmorpg.chat.not_meet_map_req_first_line": "你尚未达到地图的需求： ",
+	"mmorpg.chat.not_meet_map_req_first_line": "你尚未达到地图的需求：",
 	"mmorpg.chat.not_mns_weapon": "你需要装备上挖矿与砍杀的武器（即拥有属性的武器）才能施法。",
 	"mmorpg.chat.not_owner": "你不是这一工作站的主人。工作站无法共享使用，每人只能使用由自己制作得到的工作站。",
 	"mmorpg.chat.not_skillgem": "此物不是技艺宝石",
@@ -2534,14 +2534,14 @@
 	"mmorpg.word.affixes_affecting_all": "所有",
 	"mmorpg.word.aggresive_summons": "召唤物主动进攻\n\n你的随从会主动攻击任何敌人，无需你亲自指挥。\n\n修改此项后需要重新召唤你的随从",
 	"mmorpg.word.all": "所有",
-	"mmorpg.word.allowedon": "可用于： ",
+	"mmorpg.word.allowedon": "可用于：",
 	"mmorpg.word.areacontains": "区域内有通往终极头目所在地点的传送门",
-	"mmorpg.word.armor": "镶入护甲时： ",
+	"mmorpg.word.armor": "镶入护甲时：",
 	"mmorpg.word.arrow_draw_amount_multi": "拉弓次数倍率",
 	"mmorpg.word.ascclasses": "升华",
 	"mmorpg.word.attack_speed_multi": "攻击速度倍率",
 	"mmorpg.word.aura": "光环",
-	"mmorpg.word.automatic_pve": "智能 PVE\n\n开启这项功能的玩家被视为组队\n- 玩家之间有距离限制 （在配置文件中可以更改生效半径）",
+	"mmorpg.word.automatic_pve": "智能 PVE\n\n开启这项功能的玩家被视为组队\n- 玩家之间有距离限制（在配置文件中可以更改生效半径）",
 	"mmorpg.word.avg_lvl": "平均等级：%1$s",
 	"mmorpg.word.avg_tier": "平均等阶：%1$s",
 	"mmorpg.word.backpack": "背包",
@@ -2550,7 +2550,7 @@
 	"mmorpg.word.cantgetmoreaffixes": "词缀数量已达上限。",
 	"mmorpg.word.capped_because_player_level": " - 下一栏位将在 %1$s 级时解锁。",
 	"mmorpg.word.capped_to_lvl": "[受限于等级]",
-	"mmorpg.word.capped_to_wep_dmg": " （上限为武器伤害的 %1$s%%）",
+	"mmorpg.word.capped_to_wep_dmg": "（上限为武器伤害的 %1$s%%）",
 	"mmorpg.word.cast_fail_msgs": "法术施放失败提示\n\n施法失败时将会发送提醒\n对新玩家很有帮助",
 	"mmorpg.word.cast_time": "施放时间：%1$s 秒",
 	"mmorpg.word.casted_times_channel": "引导期间会施放 %1$s 次",
@@ -2579,7 +2579,7 @@
 	"mmorpg.word.deletesallaffixes": "移除所有词缀",
 	"mmorpg.word.destroysitem": "彻底破坏此物品",
 	"mmorpg.word.disabled": "禁用",
-	"mmorpg.word.dmg_conflict_check": "模组冲突检测（Debug） \n\n检测挖矿与砍杀的伤害是否被其他模组影响\n如果出现问题会发送消息告知您\n 这是一个 DEBUG 选项",
+	"mmorpg.word.dmg_conflict_check": "模组冲突检测（Debug）\n\n检测挖矿与砍杀的伤害是否被其他模组影响\n如果出现问题会发送消息告知你\n 这是一个 DEBUG 选项",
 	"mmorpg.word.dmgmultiinfo": "伤害倍率，该项为乘算伤害来源",
 	"mmorpg.word.downgradeaffix": "词缀降级",
 	"mmorpg.word.drag_no_work_creative": "拖拽交互在创造模式下无法生效",
@@ -2608,8 +2608,8 @@
 	"mmorpg.word.hasset": "有套装词条",
 	"mmorpg.word.hasuniquestats": "有独特属性",
 	"mmorpg.word.hotbar": "法术快捷栏",
-	"mmorpg.word.implicit_stats": "隐藏属性： ",
-	"mmorpg.word.increase_percent_stat": "额外 ",
+	"mmorpg.word.implicit_stats": "隐藏属性：",
+	"mmorpg.word.increase_percent_stat": "额外",
 	"mmorpg.word.increase_percent_stat.locale_context_for_translator": "use for stat like \"(Extra) (attack speed)\", this is different with multiply stat prefix.",
 	"mmorpg.word.increased": "增长",
 	"mmorpg.word.increasespelllevel": "提升你的法术等级以解锁该辅助宝石栏位！",
@@ -2622,7 +2622,7 @@
 	"mmorpg.word.item": "物品",
 	"mmorpg.word.jewel": "珠宝",
 	"mmorpg.word.jewels": "珠宝",
-	"mmorpg.word.jewerly": "镶入珠宝时： ",
+	"mmorpg.word.jewerly": "镶入珠宝时：",
 	"mmorpg.word.lasts_sec": "持续 %1$s 秒",
 	"mmorpg.word.lesser": "低等",
 	"mmorpg.word.level": "等级",
@@ -2659,9 +2659,9 @@
 	"mmorpg.word.nosocketedspell": "未选择法术",
 	"mmorpg.word.not_a_potential_consumer": "使用时不消耗潜能",
 	"mmorpg.word.nothing": "无",
-	"mmorpg.word.on_slots": "栏位： ",
+	"mmorpg.word.on_slots": "栏位：",
 	"mmorpg.word.only_show_allocated": "仅显示已点亮的天赋，点击可切换开启/关闭",
-	"mmorpg.word.per_stack": " （每层）： ",
+	"mmorpg.word.per_stack": "（每层）：",
 	"mmorpg.word.pet_basic": "宠物基础攻击：",
 	"mmorpg.word.player_affixes": "玩家词缀",
 	"mmorpg.word.possible_drops": "可能掉落的装备：",
@@ -2676,8 +2676,8 @@
 	"mmorpg.word.prophecyplayeraffixtaken": "当前负面效果：",
 	"mmorpg.word.pvp_dmg_multi": "PVP 伤害倍率",
 	"mmorpg.word.radius": "半径：%1$s 个方块",
-	"mmorpg.word.req_level": "需求等级： ",
-	"mmorpg.word.requirements": "需求： ",
+	"mmorpg.word.req_level": "需求等级：",
+	"mmorpg.word.requirements": "需求：",
 	"mmorpg.word.rerollsaffix": "重置一个词缀",
 	"mmorpg.word.reward_offers": "可选奖励：",
 	"mmorpg.word.rune": "符文",
@@ -2695,7 +2695,7 @@
 	"mmorpg.word.stats": "属性",
 	"mmorpg.word.status_effect": "状态效果",
 	"mmorpg.word.suppgem": "辅助宝石",
-	"mmorpg.word.tags": "标签： ",
+	"mmorpg.word.tags": "标签：",
 	"mmorpg.word.talents": "天赋",
 	"mmorpg.word.target": "目标",
 	"mmorpg.word.tier": "等阶",
@@ -2706,10 +2706,10 @@
 	"mmorpg.word.upgradeenchant": "升级或是重置附魔",
 	"mmorpg.word.upgradequality": "提升质量",
 	"mmorpg.word.upgradesuniquestats": "独特属提高 10%",
-	"mmorpg.word.usableon": "可用于： ",
+	"mmorpg.word.usableon": "可用于：",
 	"mmorpg.word.usablevalueinfo": "该属性的有效值，该值用于衡量类似于护甲这类在计算时需要转换为另一数值的属性。你面对的怪物等级越高，相同属性绝对值下属性的有效值便越低",
 	"mmorpg.word.very_hard": "非常困难",
-	"mmorpg.word.weapon": "镶入武器时： ",
+	"mmorpg.word.weapon": "镶入武器时：",
 	"mmorpg.word.weapon_basic_attack_dmg_multi": "武器基础攻击伤害倍率",
 	"mmorpg.word.while_under_aura": "处于%1$s状态时：",
 	"mmorpg.word.wiki": "百科",
@@ -2753,7 +2753,7 @@
 
 
 
-	"mmorpg.command.auto_pve_teammate": " （自动 PVE）",
+	"mmorpg.command.auto_pve_teammate": "（自动 PVE）",
 	"mmorpg.command.been_invited": "%1$s邀请你加入他的队伍。",
 	"mmorpg.command.been_kicked": "你被踢出了队伍。",
 	"mmorpg.command.cant_invite_yourself": "你不能邀请自己！",
@@ -2768,13 +2768,13 @@
 	"mmorpg.command.kick_info": "你已将 %1$s 踢出了队伍。",
 	"mmorpg.command.leave_team": "你离开了当前队伍。",
 	"mmorpg.command.not_in_a_team_currently": "玩家不在队伍中",
-	"mmorpg.command.not_in_same_team_due_to_distance": " （距离过远）",
+	"mmorpg.command.not_in_same_team_due_to_distance": "（距离过远）",
 	"mmorpg.command.not_in_team": "你不在队伍中",
 	"mmorpg.command.not_invited": "你并未被该队伍邀请。",
 	"mmorpg.command.player_not_in_team": "该玩家不在你的队伍中",
 	"mmorpg.command.somebody_joined_your_team": "%1$s 加入了你的队伍！",
 	"mmorpg.command.team_created": "队伍创建成功，现在你可以邀请玩家加入你的队伍了。",
-	"mmorpg.command.team_member": "队伍成员： ",
+	"mmorpg.command.team_member": "队伍成员：",
 	"mmorpg.command.transfer_leadership": "%1$s 现在是队长。",
 	"mmorpg.command.you_are_leader": "你现在是队长。",
 	"mmorpg.command.you_are_not_leader": "你不是队长。",
@@ -2823,7 +2823,7 @@
 
 	"mmorpg.stat_desc.accuracy": "提高你命中敌人的几率，低精准度会导致你难以暴击。具体而言，它能够降低敌人闪避的几率。",
 	"mmorpg.stat_desc.aggro_radius": "半径越长，意味着随从可以走到更远的地方帮助杀敌，越短则意味着他们会一直待在你附近",
-	"mmorpg.stat_desc.agony_immunity": "使你免疫所有的挖砍效果。注意，不是原版的效果！",
+	"mmorpg.stat_desc.agony_immunity": "使你免疫该种挖砍效果。注意，不是原版的效果！",
 	"mmorpg.stat_desc.ailment_damage": "提升异常状态造成的伤害。",
 	"mmorpg.stat_desc.alchemy_core_drop_bonus": "生产职业的掉落现在会被划分为不同的种类，这一属性会提升与其对应的掉落物的掉落几率。",
 	"mmorpg.stat_desc.alchemy_double_drop": "副职业掉落发生时，一定几率使得掉落物增至两倍",
@@ -2923,7 +2923,7 @@
 	"mmorpg.stat_desc.damage_cdr": "减少带有此标签法术的冷却时间",
 	"mmorpg.stat_desc.damage_shield": "减少每次被攻击时受到的伤害",
 	"mmorpg.stat_desc.damage_spell_dmg": "增加带有此标签法术的伤害，例如，图腾伤害指的是增加图腾造成的伤害",
-	"mmorpg.stat_desc.despair_immunity": "使你免疫所有的挖砍效果。注意，不是原版的效果！",
+	"mmorpg.stat_desc.despair_immunity": "使你免疫该种挖砍效果。注意，不是原版的效果！",
 	"mmorpg.stat_desc.dex_dmg": "例如，魔法伤害指的是带有魔法标签的法术造成的伤害",
 	"mmorpg.stat_desc.dexterity": "决定了你总体的能量值、闪避率以及能量值恢复",
 	"mmorpg.stat_desc.dmg_per_endurance_charge": "根据你当前所拥有的特定效果的层数，给予你属性增益",
@@ -3194,7 +3194,7 @@
 	"mmorpg.stat_desc.shout_cast_time": "减少带有此标签法术的施法时间",
 	"mmorpg.stat_desc.shout_cdr": "减少带有此标签法术的冷却时间",
 	"mmorpg.stat_desc.shout_spell_dmg": "增加带有此标签法术的伤害，例如，图腾伤害指的是增加图腾造成的伤害",
-	"mmorpg.stat_desc.slow_immunity": "使你免疫所有的挖砍效果。注意，不是原版的效果！",
+	"mmorpg.stat_desc.slow_immunity": "使你免疫该种挖砍效果。注意，不是原版的效果！",
 	"mmorpg.stat_desc.song_cast_time": "减少带有此标签法术的施法时间",
 	"mmorpg.stat_desc.song_cdr": "减少带有此标签法术的冷却时间",
 	"mmorpg.stat_desc.song_spell_dmg": "增加带有此标签法术的伤害，例如，图腾伤害指的是增加图腾造成的伤害",
@@ -3240,12 +3240,12 @@
 	"mmorpg.stat_desc.unknown_stat": "这一属性将被移除或是重命名。",
 	"mmorpg.stat_desc.water_dmg_when_target_low_hp": "低生命值指的是生命值小于等于30%。",
 	"mmorpg.stat_desc.water_dot_damage": "提高火焰持续伤害的伤害量，例如灼烧。",
-	"mmorpg.stat_desc.weak_immunity": "使你免疫所有的挖砍效果。注意，不是原版的效果！",
+	"mmorpg.stat_desc.weak_immunity": "使你免疫该种挖砍效果。注意，不是原版的效果！",
 	"mmorpg.stat_desc.weapon_damage": "特定法术会用到",
 	"mmorpg.stat_desc.weapon_skill_cast_time": "减少带有此标签法术的施法时间",
 	"mmorpg.stat_desc.weapon_skill_cdr": "减少带有此标签法术的冷却时间",
 	"mmorpg.stat_desc.weapon_skill_spell_dmg": "增加带有此标签法术的伤害，例如，图腾伤害指的是增加图腾造成的伤害",
-	"mmorpg.stat_desc.wounds_immunity": "使你免疫所有的挖砍效果。注意，不是原版的效果！",
+	"mmorpg.stat_desc.wounds_immunity": "使你免疫该种挖砍效果。注意，不是原版的效果！",
 
 
 
