--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -234,3 +234,5 @@ v.5.5.21
 - proc_spell DATAPACK now includes source and target fields so you can specify
 - added spell_has_resource_type_cost spell condition DATAPACK which can be used to make archmage not give bonus dmg or work on spells without a mana cost (or energy etc)
 - this change also makes archmage not work on spells that dont cost mana, neither the mana increase nor the dmg addition
+- added enabled = false will now unregister the datapack
+- added PROFESSION_EXP_PENALTY_PER_LOWER_LEVEL to gamebalance datapack
