--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -23,3 +23,4 @@ Previously point configs were spread to both configs and datapacks, and each use
 - runes, gems, augment and supp gems now show what level they start dropping at 
 - more misc tooltip tweaks
 - doubled unarmed energy cost
+- removed ALWAYS_SCALE_MOB_LEVEL_TO_PLAYER config because the datapack for it exists (per dimension), and it confused players
