--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -24,3 +24,5 @@ Previously point configs were spread to both configs and datapacks, and each use
 - more misc tooltip tweaks
 - doubled unarmed energy cost
 - removed ALWAYS_SCALE_MOB_LEVEL_TO_PLAYER config because the datapack for it exists (per dimension), and it confused players
+- added give watcher_eye_jewel command
+- fixed watcher eye tooltips
